[gd_scene load_steps=6 format=2]

[ext_resource path="res://res/cards/forest.png" type="Texture" id=1]
[ext_resource path="res://src/SelectableCard.gd" type="Script" id=2]
[ext_resource path="res://res/cards/card_eliminate.png" type="Texture" id=3]
[ext_resource path="res://res/cards/card_background.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51.8514, 82.6537 )

[node name="SelectableCard" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
pause_mode = 2
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="SelectSprite" type="Sprite" parent="Sprite"]
visible = false
scale = Vector2( 1.05, 1.05 )
z_index = -1
texture = ExtResource( 4 )

[node name="EliminateSprite" type="Sprite" parent="."]
pause_mode = 2
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
pause_mode = 2
shape = SubResource( 1 )
[connection signal="input_event" from="." to="." method="_on_SelectableCard_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_SelectableCard_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SelectableCard_mouse_exited"]
